Bug 152329 - GTK3: Caption preview font is black when using OS dark mode
Summary: GTK3: Caption preview font is black when using OS dark mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.6.2 release
Hardware: x86-64 (AMD64) Linux (All)
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: gtk3-themeing Caption Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-11-30 23:31 UTC by Stéphane Guillou (stragu)
Modified: 2022-12-04 11:34 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
screenshot of issue in LO 7.5 (222.99 KB, image/png)
2022-11-30 23:31 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2022-11-30 23:31:23 UTC
Created attachment 183927 [details]
screenshot of issue in LO 7.5

Steps:

0. Turn GNOME dark mode on
1. Open Writer
2. Insert a picture
3. Right-click > Insert Caption

Actual results:

Preview is in black on dark grey background, lacking contrast and looking out of place when other font is lighter throughout the UI.

Versions:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

all the way to a build from today:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 01a3cc1e55034f7703219d4bbb209de7c37bf07b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproducible with KF5 VCL (cairo+xcb) nor on Windows.
Comment 1 Commit Notification 2022-12-01 10:09:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d45d65559f11ecb34b14e3b5c838391c62c8c694

Resolves: tdf#152329 Caption preview font is black when using OS dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2022-12-01 10:09:42 UTC
done in trunk, backport to 7-4 in gerrit
Comment 3 Commit Notification 2022-12-01 11:49:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/05776b4304485490760fb5213066a094c6e9600a

Resolves: tdf#152329 Caption preview font is black when using OS dark mode

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Stéphane Guillou (stragu) 2022-12-04 11:34:08 UTC
Verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: c50cf1883af26daebdfc9d796ced3c20c222f43b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán!