Resolves: tdf#152329 Caption preview font is black when using OS dark mode

Change-Id: I2ed9ae77ecb9a5a83d88dce5a2834e6c882cfec1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143448
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>